<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5">


            <TextView
                android:id="@+id/id_textview"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Id"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name_textview"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:text="Nume"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="30sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:src="@drawable/coldrex" />


            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/layout_bottom">

                    <TextView
                        android:id="@+id/label_detaExp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_dataexp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

                    <TextView
                        android:id="@+id/dataexp_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Data exp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/layout_margin">

                    <TextView
                        android:id="@+id/label_bucati"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_bucati"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

                    <TextView
                        android:id="@+id/pieces_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Buc"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/layout_bottom">


                    <TextView
                        android:id="@+id/label_substBaza"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_substBaza"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

                    <TextView
                        android:id="@+id/substBaza_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="subst"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/layout_bottom" >


                    <TextView
                        android:id="@+id/label_cantitate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_cantitateSubstBaza"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <TextView
                        android:id="@+id/quantity_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100mg"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/label_descriere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_descriere"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

                    <TextView
                        android:id="@+id/description_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Descriere"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
